# fetcher

./: Cargo.toml  README.md  config.json  docker-compose.yaml
src/: main.rs
src/config/: config.rs
src/domain/: fetcher.rs
src/http/: factory.rs  handlers.rs  mod.rs  server.rs
src/storage/: connection.rs  mod.rs  storage.rs
src/storage/db/: mod.rs  mysql.rs  postgres.rs
