[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.32", features = ["full"]}
tokio-postgres = "0.7"
mysql_async = "0.32"
#async-std = { version = "1.12", features = ["attributes", "tokio1"] }
pin-project = "1"
futures-executor = "0.3"
futures-util = "*"
curl = "0.4"
select = "0.6.0-alpha.1"
serde_json = "1.0"
postgres = "0.19"
mysql = "24"